# ITUProject

BBL553_Algorithm_Engineering/: HW1.docx  HW1.pptx  HW2.docx  HW3.docx  HW4.docx  Quiz1.docx
BBL553_Algorithm_Engineering/SkipList/: BasicSkipList.c  CMakeLists.txt  ExternalSkipList.c  Report.docx  SIMD_test.c  SkipList.c  SkipList.h  SkipList2.c  SkipListCache.c  SkipListSIMD.c  testCorrectness.c  testData.h  testSpeed.c
BLG501_Discrete_Mathematic/: Course 1.txt  Course4.tex  Course5.tex  HW.tex  course3.tex  course6.md
BLG520_Cryptography/: Handbook of Applied Cryptography.html  trigrams.json
BLG520_Cryptography/HW1/: bigrams.json  cipher.txt  cipher2.txt  cipher4.txt  cryptoAutokey.py  cryptoAutokeyPermut.py  letters.json  report.html  report.md
BLG520_Cryptography/HW2/: Report.docx  diffAnalysis.py
BLG520_Cryptography/HW3/: Comm.pcapng  Report.docx  client.py  clientSimple.py  content.txt  contentSimple.txt  modularExpo.py  server.py  serverSimple.py  wrapper.py
BLG545_Discrete_Optimization/GCP/: CMakeLists.txt  GCP_IG.cpp  GCP_IG.h  main.cpp
BLG545_Discrete_Optimization/KSP/: BranchBounds.cpp  BranchBounds.h  CMakeLists.txt  Simplex.cpp  Simplex.h  Solver.h  main.cpp
BLG545_Discrete_Optimization/VRP/: CMakeLists.txt  VRPDynamic.cpp  VRPDynamic.h  main.cpp
BLG549_Graph_Theory/BLG-549E-Graph-Theory-Term-Project/: README.md  (+1 more)
BLG557_Theory_Computation/: Course.md
HBM514_Parallel_Programming/: 2DwaveEq.c  VPN.md  a  a.out  submit.sl
HBM514_Parallel_Programming/HW1/: CMakeLists.txt  README.txt  Report.docx  matrixVector.cpp
HBM514_Parallel_Programming/HW1/buildWSL/: CMakeCache.txt  Makefile  MatrixVectorMultiplication  cmake_install.cmake
HBM514_Parallel_Programming/HW2/: CMakeLists.txt  GaussSeidel  Jacobi  LU  LU.cpp  LinearEquation.cpp  LinearEquation.h  Report.docx  gaussSeidel.cpp  jacobi.cpp
HBM514_Parallel_Programming/HW2/out_10k/: GS_1  GS_128  GS_2  GS_4  GS_8  Jac_1  Jac_128  Jac_16  Jac_2  Jac_32  Jac_4  Jac_64  Jac_8  LU_1  LU_128  LU_16  LU_2  LU_32  LU_4  LU_64  LU_8  err_GS_128  err_GS_32  err_GS_64  err_Jac_128  err_Jac_32  err_Jac_64  err_LU_128  err_LU_32  err_LU_64
HBM514_Parallel_Programming/HW2/out_50k/: GS_16  GS_32  GS_64  Jac_128  Jac_32  Jac_64  LU_128  LU_16  LU_32  LU_4  LU_64  LU_8  err_GS_1  err_Jac_1  err_Jac_128  err_Jac_32  err_Jac_64  err_LU_1  err_LU_128  err_LU_2  err_LU_32  err_LU_64
HBM514_Parallel_Programming/HW2/wbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GaussSeidel.vcxproj  Jacobi.vcxproj  LU.vcxproj  LU.vcxproj.filters  LinearEquation.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
HBM514_Parallel_Programming/HW2/wbuild/GaussSeidel.dir/Release/: GaussSeidel.exe.recipe
HBM514_Parallel_Programming/HW2/wbuild/GaussSeidel.dir/Release/GaussSeidel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GaussSeidel.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HBM514_Parallel_Programming/HW2/wbuild/Jacobi.dir/Release/: Jacobi.exe.recipe
HBM514_Parallel_Programming/HW2/wbuild/Jacobi.dir/Release/Jacobi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HBM514_Parallel_Programming/HW2/wbuild/LU.dir/Release/: LU.exe.recipe
HBM514_Parallel_Programming/HW2/wbuild/LU.dir/Release/LU.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HBM514_Parallel_Programming/HW2/wbuild/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
HBM514_Parallel_Programming/HW2/wbuild/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
HBM514_Parallel_Programming/HW2/wbuild/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
HBM514_Parallel_Programming/HW2/wbuild/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
HBM514_Parallel_Programming/Project/: 3D Poisson’s equation.pptx  3D_poisson.cpp  3D_poisson_RB.cpp  CMakeLists.txt  README.md  Report.docx  Untitled-1.md  ~$Report.docx
HBM514_Parallel_Programming/Project/Pictures/: Cubes.pfi
HBM514_Parallel_Programming/Project/fbuild/: CMakeCache.txt  Makefile  a  cmake_install.cmake
HBM514_Parallel_Programming/Project/out_500/: out_p1  out_p128  out_p16  out_p2  out_p32  out_p4  out_p64  out_p8
HBM514_Parallel_Programming/Project/wbuild/: 3DPoisson.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a.vcxproj  a.vcxproj.filters  cmake_install.cmake
HBM514_Parallel_Programming/Project/wbuild/Debug/: a.ilk
HBM514_Parallel_Programming/Project/wbuild/a.dir/Debug/: a.exe.recipe
HBM514_Parallel_Programming/Project/wbuild/a.dir/Debug/a.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HBM514_Parallel_Programming/Project/wbuild/a.dir/Release/: a.exe.recipe
HBM514_Parallel_Programming/Project/wbuild/a.dir/Release/a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  a.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HBM514_Parallel_Programming/Project/wbuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
HBM514_Parallel_Programming/Project/wbuild/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
HBM514_Parallel_Programming/Project/wbuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
HBM514_Parallel_Programming/Project/wbuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
HBM514_Parallel_Programming/Project/wbuild/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
HBM514_Parallel_Programming/Project/wbuild/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
HBM514_Parallel_Programming/Project/wbuild/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
HBM514_Parallel_Programming/Project/wbuild/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
(+15 files in other folders)
